Fix node modules not found error.

--- a/image/base/Dockerfile
+++ b/image/base/Dockerfile
@@ -141,5 +141,10 @@ RUN useradd discourse -s /bin/bash -m -U &&\
     sudo -u discourse bundle config --local path ./vendor/bundle &&\
     sudo -u discourse bundle config --local without test development &&\
     sudo -u discourse bundle install --jobs 4 &&\
+    npm install -g yarn &&\
+    npm install -g n &&\
+    n stable &&\
+    sudo -u discourse yarn install --production --frozen-lockfile &&\
+    sudo -u discourse yarn cache clean &&\
     bundle exec rake maxminddb:get &&\
     find /var/www/discourse/vendor/bundle -name tmp -type d -exec rm -rf {} +
