--- a/image/base/Dockerfile
+++ b/image/base/Dockerfile
@@ -134,6 +134,7 @@ RUN useradd discourse -s /bin/bash -m -U &&\
     cd /var/www &&\
     git clone --depth 1 https://github.com/opensourceways/discourse.git &&\
     cd discourse &&\
+    git checkout v2.8.8 &&\
     git remote set-branches --add origin tests-passed &&\
     chown -R discourse:discourse /var/www/discourse &&\
     cd /var/www/discourse &&\
