--- a/image/base/Dockerfile
+++ b/image/base/Dockerfile
@@ -136,7 +136,7 @@ ADD cron.d_anacron /etc/cron.d/anacron
 RUN useradd discourse -s /bin/bash -m -U &&\
     mkdir -p /var/www &&\
     cd /var/www &&\
-    git clone --depth 1 https://github.com/opensourceways/discourse.git &&\
+    git clone --depth 1 https://github.com/discourse/discourse.git &&\
     cd discourse &&\
     git remote set-branches --add origin tests-passed &&\
     git fetch origin tests-passed &&\
