--- a/containers/web_only.yml
+++ b/containers/web_only.yml
@@ -100,7 +100,7 @@ hooks:
         cmd:
           - mkdir -p plugins
           - git clone https://github.com/discourse/docker_manager.git
-          - git clone -b service https://GIT_USERNAME:GIT_PASSWORD@github.com/opensourceways/discourse-easecheck.git
+          - git clone -b release/euler https://GIT_USERNAME:GIT_PASSWORD@github.com/opensourceways/discourse-easecheck.git
           - git clone https://github.com/opensourceways/discourse-oauth2-basic.git
           - git clone https://github.com/opensourceways/discourse-formatting-toolbar.git
           - git clone https://github.com/opensourceways/discourse-translator.git
