--- a/containers/web_only.yml
+++ b/containers/web_only.yml
@@ -26,8 +26,8 @@ templates:
 
 params:
   ## Which Git revision should this container use? (default: tests-passed)
-  version:
-
+  version: 4e760f7b7957d135fdb4458c30af99e92be4cc70
+  
 env:
   LC_ALL: en_US.UTF-8
   LANG: en_US.UTF-8
