--- a/containers/web_only.yml
+++ b/containers/web_only.yml
@@ -26,7 +26,7 @@ templates:
 
 params:
   ## Which Git revision should this container use? (default: tests-passed)
-  version: e0132d1bafbd5b69a6a2f7d595d54afd292c5fc5
+  version:
 
 env:
   LC_ALL: en_US.UTF-8
