--- a/containers/web_only.yml
+++ b/containers/web_only.yml
@@ -74,6 +74,7 @@ env:
   DISCOURSE_DB_PASSWORD:
   DISCOURSE_DB_HOST:
   DISCOURSE_REDIS_HOST:
+  DISCOURSE_REDIS_PASSWORD:
 
   ## The http or https CDN address for this Discourse instance (configured to pull)
   ## see https://meta.discourse.org/t/14857 for details
