--- a/containers/web_only.yml
+++ b/containers/web_only.yml
@@ -110,6 +110,11 @@ hooks:
           - git clone https://github.com/discourse/discourse-reactions.git
           - git clone https://github.com/opensourceways/discourse-multilingual.git
 
+  before_bundle_exec:
+    - exec:
+        cmd:
+          - sed -i '/rm -f \/etc\/cron.d\/anacron/d' /pups/templates/web.template.yml
+
 ## Remember, this is YAML syntax - you can only have one block with a name
 run:
   # - exec: echo "Beginning of custom commands"
