--- a/templates/web.template.yml
+++ b/templates/web.template.yml
@@ -27,7 +27,7 @@ run:
         - /usr/local/bin/ruby -e 'if ENV["DISCOURSE_HOSTNAME"] == "discourse.example.com"; puts "Aborting! Domain is not configured!"; exit 1; end'
         - /usr/local/bin/ruby -e 'if (ENV["DISCOURSE_CDN_URL"] || "")[0..1] == "//"; puts "Aborting! CDN must have a protocol specified. Once fixed you should rebake your posts now to correct all posts."; exit 1; end'
   # TODO: move to base image (anacron can not be fired up using rc.d)
-  - exec: rm -f /etc/cron.d/anacron
+  # - exec: rm -f /etc/cron.d/anacron
   - file:
      path: /etc/cron.d/anacron
      contents: |
