--- a/containers/web_only.yml
+++ b/containers/web_only.yml
@@ -74,6 +74,7 @@ env:
   DISCOURSE_DB_PASSWORD:
   DISCOURSE_DB_HOST:
   DISCOURSE_REDIS_HOST:
+  DISCOURSE_REDIS_PASSWORD:
 
   ## The http or https CDN address for this Discourse instance (configured to pull)
   ## see https://meta.discourse.org/t/14857 for details
@@ -128,9 +129,5 @@ run:
         - bash -c "touch -a /shared/log/rails/{sidekiq,puma.err,puma}.log"
         - bash -c "ln -sf /shared/log/rails/{sidekiq,puma.err,puma}.log log/"
         - sed -i 's/default \$scheme;/default https;/' /etc/nginx/conf.d/discourse.conf
-   - exec: chown -R discourse:discourse /var/www 
-   - exec: chmod -R 755 /var/www
-
-boot_command: "su - discourse -c '/sbin/boot'"
   # - exec: echo "End of custom commands"
   # - exec: awk -F\# '{print $1;}' ~/.ssh/authorized_keys | awk 'BEGIN { print "Authorized SSH keys for this container:"; } NF>=2 {print $NF;}'
