--- a/Dockerfile.runtime
+++ b/Dockerfile.runtime
@@ -6,6 +6,8 @@ RUN mkdir -p /shared/state/logrotate && ln -s /shared/state/logrotate /var/lib/l
 	mkdir -p /shared/log/rails && mkdir -p /shared/uploads && mkdir -p /shared/backups && \
 	rm -rf /shared/tmp/{backups,restores} && mkdir -p /shared/tmp/{backups,restores} && \
     chown -R discourse:www-data /etc/runit/1.d && \
+    chown -R discourse:www-data /etc/service && \
+    chmod -R 755 discourse:www-data /etc/service && \
     rm -f /etc/runit/1.d/00-fix-var-logs && \
     mkdir -p /var/log/nginx && \
     chown -R www-data:www-data /var/log/nginx && \
