--- a/Dockerfile.runtime
+++ b/Dockerfile.runtime
@@ -7,7 +7,7 @@ RUN mkdir -p /shared/state/logrotate && ln -s /shared/state/logrotate /var/lib/l
 	rm -rf /shared/tmp/{backups,restores} && mkdir -p /shared/tmp/{backups,restores} && \
     chown -R discourse:www-data /etc/runit/1.d && \
     chown -R discourse:www-data /etc/service && \
-    chmod -R 755 discourse:www-data /etc/service && \
+    chmod -R 755 /etc/service && \
     rm -f /etc/runit/1.d/00-fix-var-logs && \
     mkdir -p /var/log/nginx && \
     chown -R www-data:www-data /var/log/nginx && \
