--- a/Dockerfile.runtime
+++ b/Dockerfile.runtime
@@ -20,9 +20,16 @@ RUN mkdir -p /shared/state/logrotate && ln -s /shared/state/logrotate /var/lib/l
     chown -R discourse:www-data /shared && \
     chown -R discourse:www-data /var/log && \
     chown -R discourse:www-data /var/lib && \
+    chown -R discourse:www-data /var/run && \
+    chown -R discourse:www-data /run && \
     chown -R discourse:www-data /tmp && \
-    chown -R discourse:www-data /dev && \
-    chown -R discourse:www-data /var/spool
+    chown -R discourse:www-data /dev/log && \
+    chown -R discourse:www-data /var/spool && \
+    sed -i "s|root|discourse|g" /etc/rsyslog.conf && \
+    sed -i "s|adm|www-data|g" /etc/rsyslog.conf && \
+    sed -i "s|chgrp|#chgrp|g" /etc/service/rsyslog/run && \
+    sed -i "s|chmod|#chmod|g" /etc/service/rsyslog/run
+
 
 # 切换到非root用户
 USER discourse
