--- a/containers/web_only.yml
+++ b/containers/web_only.yml
@@ -32,6 +32,8 @@ env:
   LC_ALL: en_US.UTF-8
   LANG: en_US.UTF-8
   LANGUAGE: en_US.UTF-8
+  DISCOURSE_RUN_AS_ROOT: 
+  DISCOURSE_USE_PRECOMPILED_ASSETS: 
   # DISCOURSE_DEFAULT_LOCALE: en
 
   ## How many concurrent web requests are supported? Depends on memory and CPU cores.
@@ -74,6 +76,7 @@ env:
   DISCOURSE_DB_PASSWORD:
   DISCOURSE_DB_HOST:
   DISCOURSE_REDIS_HOST:
+  DISCOURSE_REDIS_PASSWORD:
 
   ## The http or https CDN address for this Discourse instance (configured to pull)
   ## see https://meta.discourse.org/t/14857 for details
