feat: upgrade translator plugin

--- a/containers/web_only.yml
+++ b/containers/web_only.yml
@@ -26,7 +26,7 @@ templates:
 
 params:
   ## Which Git revision should this container use? (default: tests-passed)
-  version: b056f9538b30bc4d8dce735f631afe31f99ddc57
+  version: 189e1361e1f33432cb8feae46223ed2285f8e564 #v3.5.0.beta6
 
 env:
   LC_ALL: en_US.UTF-8
@@ -102,12 +102,12 @@ hooks:
           - git clone https://github.com/discourse/docker_manager.git
           - git clone https://GIT_USERNAME:GIT_PASSWORD@github.com/opensourceways/discourse-easecheck.git
           - git clone https://github.com/opensourceways/discourse-oauth2-basic.git
-          - git clone https://github.com/opensourceways/discourse-formatting-toolbar.git
-          - git clone https://github.com/opensourceways/discourse-translator.git
+          - git clone https://github.com/MonDiscourse/discourse-formatting-toolbar.git
+          - git clone https://github.com/discourse/discourse-translator
           - git clone https://github.com/discourse/discourse-solved.git
           - git clone https://github.com/discourse/discourse-gamification.git
           - git clone https://github.com/discourse/discourse-reactions.git
-          - git clone https://github.com/opensourceways/discourse-multilingual.git
+          # - git clone https://github.com/opensourceways/discourse-multilingual.git
 
 ## Remember, this is YAML syntax - you can only have one block with a name
 run:
