--- a/containers/web_only.yml
+++ b/containers/web_only.yml
@@ -26,7 +26,7 @@ templates:
 
 params:
   ## Which Git revision should this container use? (default: tests-passed)
-  version: b056f9538b30bc4d8dce735f631afe31f99ddc57
+  version: v3.5.0.beta7
 
 env:
   LC_ALL: en_US.UTF-8
@@ -111,7 +111,7 @@ hooks:
           - git clone https://github.com/discourse/discourse-solved.git
           - git clone https://github.com/discourse/discourse-gamification.git
           - git clone https://github.com/discourse/discourse-reactions.git
-          - git clone https://github.com/opensourceways/discourse-multilingual.git
+          # - git clone https://github.com/opensourceways/discourse-multilingual.git
 
 ## Remember, this is YAML syntax - you can only have one block with a name
 run:
