--- a/containers/web_only.yml
+++ b/containers/web_only.yml
@@ -26,7 +26,7 @@ templates:
 
 params:
   ## Which Git revision should this container use? (default: tests-passed)
-  version: b056f9538b30bc4d8dce735f631afe31f99ddc57
+  version:
 
 env:
   LC_ALL: en_US.UTF-8
@@ -103,7 +103,7 @@ hooks:
           - git clone https://GIT_USERNAME:GIT_PASSWORD@github.com/opensourceways/discourse-easecheck.git
           - git clone https://github.com/opensourceways/discourse-oauth2-basic.git
           - git clone https://github.com/opensourceways/discourse-formatting-toolbar.git
-          - git clone https://github.com/opensourceways/discourse-translator.git
+          - git clone https://github.com/discourse/discourse-translator.git
           - git clone https://github.com/discourse/discourse-solved.git
           - git clone https://github.com/discourse/discourse-gamification.git
           - git clone https://github.com/discourse/discourse-reactions.git
