--- a/templates/web.template.yml
+++ b/templates/web.template.yml
@@ -158,18 +158,7 @@ run:
   - replace:
       filename: "/etc/nginx/conf.d/discourse.conf"
       from: /listen\s+80;/
-      to: "listen 8080 ssl;"
-   
-  - replace:
-      filename: "/etc/nginx/conf.d/discourse.conf"
-      from: '^server \{'
-      to: |
-        server {
-          ssl_certificate     /etc/nginx/certs/discourse.crt;
-          ssl_certificate_key /etc/nginx/certs/discourse.key;
-          ssl_protocols       TLSv1.2;
-          ssl_prefer_server_ciphers on;
-          ssl_ciphers         HIGH:!aNULL:!MD5;
+      to: "listen 8080;"
 
   - exec:
       cmd: echo "done configuring web"
