--- a/containers/web_only.yml
+++ b/containers/web_only.yml
@@ -26,7 +26,7 @@ templates:
 
 params:
   ## Which Git revision should this container use? (default: tests-passed)v3.5.0.beta7
-  version:
+  version: v3.5.0.beta7
 
 env:
   LC_ALL: en_US.UTF-8
@@ -106,7 +106,7 @@ hooks:
           - git clone https://GIT_USERNAME:GIT_PASSWORD@github.com/opensourceways/discourse-easecheck.git
           - git clone https://github.com/opensourceways/discourse-oauth2-basic.git
           # - git clone https://github.com/opensourceways/discourse-formatting-toolbar.git
-          - git clone https://github.com/opensourceways/discourse-formatting-toolbar.git
+          - git clone https://github.com/MonDiscourse/discourse-formatting-toolbar.git
           - git clone https://github.com/opensourceways/discourse-translator.git
           - git clone https://github.com/discourse/discourse-solved.git
           - git clone https://github.com/discourse/discourse-gamification.git
