--- a/templates/web.template.yml
+++ b/templates/web.template.yml
@@ -158,7 +158,7 @@ run:
   - replace:
       filename: "/etc/nginx/conf.d/discourse.conf"
       from: /listen\s+80;/
-      to: "listen 8080 ssl;"
+      to: "listen 8080;"
 
   - exec:
       cmd: echo "done configuring web"
