--- a/containers/web_only.yml
+++ b/containers/web_only.yml
@@ -25,8 +25,8 @@ templates:
 # docker_args:
 
 params:
-  ## Which Git revision should this container use? (default: tests-passed)v3.5.0.beta7
-  version: v3.5.0.beta7
+  ## Which Git revision should this container use? (default: tests-passed)
+  version: b056f9538b30bc4d8dce735f631afe31f99ddc57
 
 env:
   LC_ALL: en_US.UTF-8
@@ -105,13 +105,12 @@ hooks:
           - git clone https://github.com/discourse/docker_manager.git
           - git clone https://GIT_USERNAME:GIT_PASSWORD@github.com/opensourceways/discourse-easecheck.git
           - git clone https://github.com/opensourceways/discourse-oauth2-basic.git
-          # - git clone https://github.com/opensourceways/discourse-formatting-toolbar.git
-          - git clone https://github.com/MonDiscourse/discourse-formatting-toolbar.git
+          - git clone https://github.com/opensourceways/discourse-formatting-toolbar.git
           - git clone https://github.com/opensourceways/discourse-translator.git
           - git clone https://github.com/discourse/discourse-solved.git
           - git clone https://github.com/discourse/discourse-gamification.git
           - git clone https://github.com/discourse/discourse-reactions.git
-          # - git clone https://github.com/opensourceways/discourse-multilingual.git
+          - git clone https://github.com/opensourceways/discourse-multilingual.git
 
 ## Remember, this is YAML syntax - you can only have one block with a name
 run:
