test new branch

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "discourse_config"]
 	path = discourse_config
 	url = https://github.com/opensourceways/discourse_config
-	branch = main
+	branch = test_ev
